new post and image

--- a/index.html
+++ b/index.html
@@ -4,27 +4,25 @@ is_index: true
 ---
 
 {% include header.html %}
-<img src="landing.jpg" width="100%">
+<img src="/landing.jpg" width="100%">
 
 <h2>Recent Posts</h2>
 {% for post in paginator.posts limit:3 %}
   {% include post_preview.html %}
 {% endfor %}
 
-{% if paginator.posts.length > 1 %}
-  <div class="pagination" id="bottom">
-    <ul>
-    {% if paginator.previous_page %}
-      {% if paginator.previous_page == 1 %}
-        <li class="previous"><a href="{{ site.baseurl }}">&larr; Previous</a></li>
-      {% else %}
-        <li class="previous"><a href="{{ site.baseurl }}/page{{ paginator.previous_page }}">&larr; Previous</a></li>
-      {% endif %}
+<div class="pagination" id="bottom">
+  <ul>
+  {% if paginator.previous_page %}
+    {% if paginator.previous_page == 1 %}
+      <li class="previous"><a href="{{ site.baseurl }}/">&larr; Newer</a></li>
+    {% else %}
+      <li class="previous"><a href="{{ site.baseurl }}/page{{ paginator.previous_page }}">&larr; Newer</a></li>
     {% endif %}
-    {% if paginator.next_page %}
-      <li class="next"><a href="{{ site.baseurl }}/page{{ paginator.next_page }}">Next &rarr;</a></li>
-    {% endif %}
-    </ul>
-  </div>
-{% endif %}
+  {% endif %}
+  {% if paginator.next_page %}
+    <li class="next"><a href="{{ site.baseurl }}/page{{ paginator.next_page }}">Older &rarr;</a></li>
+  {% endif %}
+  </ul>
+</div>
 {% include footer.html %}
